[package]
name = "tg-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
envy = "0.4"
log = "0.4.17"
futures = "0.3.21"
pretty_env_logger = "0.4"
teloxide = { version = "0.11.0", features = ["auto-send", "webhooks", "webhooks-axum"] }
tokio = { version = "1.21.2", features = ["full"] }

# Used to setup a webhook
warp = "0.3.2"
reqwest = "0.11.11"
serde_json = "1.0.82"
serde = { version = "1.0.147", features = ["derive"] }

# Database
once_cell = "1.13.0"
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.10.2"
postgres-native-tls = "0.5.0"
native-tls = "0.2.10"